1. selective gender api 2. session manage
